cmake_minimum_required(VERSION 3.28)
project(projects)

set(CMAKE_CXX_STANDARD 11)

add_executable(projects main.cpp)

add_executable(maxcontiseq 最长连续序列/maxcontiseq.cpp
        最大子数组和/test.cpp
        合并区间/test.cpp
        轮转数组/test.cpp
        除自身以外数组的乘积/test.cpp
        缺失的第一个正数/test.cpp
        矩阵置零/test.cpp
        螺旋矩阵/test.cpp
        搜索二维矩阵II/test.cpp
        旋转图像/test.cpp
        相交链表/test.cpp
        反转链表/test.cpp
        回文链表/test.cpp
        环形链表/test.cpp
        环形链表II/test.cpp
        合并两个有序链表/test.cpp
        两数相加/test.cpp
        删除链表的倒数第N个节点/test.cpp
        两两交换链表中的结点/test.cpp
        K个一组翻转链表/test.cpp
        随机链表的复制/test.cpp
        排序链表/test.cpp
        合并k个升序链表/test.cpp
        LRU缓存/LRU.cpp
        二叉树的中序遍历/test.cpp
        二叉树的最大深度/test.cpp
        翻转二叉树/test.cpp
        对称二叉树/test.cpp
        二叉树的直径/test.cpp
        二叉树的层序遍历/test.cpp
        将有序数组转换为二叉搜索树/test.cpp
        验证二叉搜索树/test.cpp
        二叉搜索树中第K小的元素/test.cpp
        二叉树的右视图/test.cpp
        二叉树展开为链表/test.cpp
        从前序和中序遍历构造二叉树/test.cpp
        路径总和/test.cpp
        二叉树最近公共祖先/test.cpp
        岛屿数量/test.cpp
        腐烂的橘子/test.cpp
        课程表/test.cpp
        实现前缀树/test.cpp
        全排列/test.cpp
        子集/test.cpp
        二叉树中的最大路径和/test.cpp
        电话号码的字母组合/test.cpp
        组合总和/test.cpp
        单词搜索/test.cpp
        分割回文串/test.cpp
        N皇后/test.cpp
        搜索插入位置/test.cpp
        搜索二维矩阵I/test.cpp
        在排序数组中查找元素的第一个和最后一个位置/test.cpp
        搜索旋转排序数组/test.cpp
        寻找旋转排序数组中的最小值/test.cpp
        有效的括号/test.cpp
        寻找两个正序数组的中位数/test.cpp
        最小栈/test.cpp
        字符串解码/test.cpp
        数组中的第K个最大元素/test.cpp
        每日温度/test.cpp
        柱状图中最大的矩形/test.cpp
        买卖股票的最佳时机/test.cpp
        爬楼梯/test.cpp
        前K个高频元素/test.cpp
        数据流的中位数/test.cpp
        跳跃游戏/test.cpp
        跳跃游戏II/test.cpp
        划分字母区间/test.cpp
        杨辉三角/test.cpp
        打家劫舍/test.cpp
        完全平方数/test.cpp
        零钱兑换/test.cpp
        单词拆分/test.cpp
        最长递增子序列/test.cpp
        乘积最大子数组/test.cpp
        分割等和子集/test.cpp
        最长有效括号/test.cpp
        不同路径/test.cpp
        最小路径和/test.cpp
        最长回文子串/test.cpp
        最长公共子序列/test.cpp
        只出现一次的数字/test.cpp
        多数元素/test.cpp
        颜色分类/test.cpp
        下一个排列/test.cpp
        寻找重复数/test.cpp
        编辑距离/test.cpp
        合并两个有序数组/test.cpp
        移除元素/test.cpp
        盛水最多的容器/test.cpp
        删除有序数组中的重复项/test.cpp
        删除有序数组中的重复项II/test.cpp
        买股票的最佳时机II/test.cpp
        "O(1)时间插入、删除和获取随机元素/test.cpp"
        H指数/test.cpp
        加油站/test.cpp
        最后一个单词的长度/test.cpp
        分发糖果/test.cpp
        最长公共前缀/test.cpp
        反转字符串中的单词/test.cpp
        Z字形变换/test.cpp
        找出字符串中第一个匹配项的下标/test.cpp
        罗马数字转整数/test.cpp
        判断子序列/test.cpp
        验证回文串/test.cpp
        整数转罗马数字/test.cpp
        两数之和II-输入有序数组/test.cpp
        长度最小的子数组/test.cpp
        无重复字符最长子串/test.cpp
        串联所有单词的子串/test.cpp
        有效的数独/test.cpp
        生命游戏/test.cpp
        文本左右对齐/test.cpp
        赎金信/test.cpp
        同构字符串/test.cpp
        单词规律/test.cpp
        有效的字母异位词/test.cpp
        快乐数/test.cpp
        存在重复元素II/tesst.cpp
        汇总区间/test.cpp
        插入区间/test.cpp
        用最少数量的箭引爆气球/test.cpp
        简化路径/test.cpp
        逆波兰表达式求值/test.cpp
        最小覆盖子串/test.cpp
        反转链表II/test.cpp
        删除排序链表中的重复元素/test.cpp
        删除排序链表中的重复元素II/test.cpp
        插入区间/test.cpp
        旋转链表/test.cpp
        分隔链表/test.cpp
)

add_executable(test 字母异位词分组/test.cpp)
